--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
-* Version 1.13 (unreleased)
+* Version 1.13 (released 2015-03-05)
+ ** Correct hex decode with uneven characters, for example "abc".
 
 * Version 1.12 (released 2014-06-11)
  ** Rewrote man pages using Asciidoc.
