--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
+* Version 1.14 (unreleased)
+
 * Version 1.13 (released 2015-03-05)
  ** Correct hex decode with uneven characters, for example "abc".
 
