--- a/README
+++ b/README
@@ -27,7 +27,7 @@ you are doing, you should download the release files instead.
 
 You may check out the sources using Git with the following command:
 
-  git clone git://github.com/Yubico/yubico-c.git
+  git clone https://github.com/Yubico/yubico-c.git
 
 This will create a directory 'yubico-c'.  Enter the directory:
 
